Add login signup page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
       <article>
         <h2 class="heading">the COUNTER</h2>
         <p>CUSTOM BURGERS</p>
-        <footer><a class="btn" href="#">Login/Sign Up</a></footer>
+        <footer>
+          <a class="btn" href="login.html">Login</a>
+        </footer>
+        <footer>
+          <a class="btn" href="signup.html">SignUp</a>
+
+        </footer>
       </article>
       <!-- ################################################################################################ -->
     </div>
