add comment where to implement Go

--- a/login.html
+++ b/login.html
@@ -8,7 +8,8 @@
 
 <h2>Login Form</h2>
 
-<form action="/action_page.php">
+<form action="/tempGo.go">
+    <!--Todo: implement and change name for tempGo.go -->
     <div class="container">
         <label for="uname"><b>Username</b></label>
         <input type="text" placeholder="Enter Username" name="uname" required>
