--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 
-<form action="/action_page.php" style="border:1px solid #ccc">
+<form action="/tempGo.go" style="border:1px solid #ccc">
+    <!--Todo: implement and change name for tempGo.go -->
     <div class="container">
         <h1>Sign Up</h1>
         <p>Please fill in this form to create an account.</p>
