changed comment to work with Go

--- a/login.html
+++ b/login.html
@@ -8,8 +8,8 @@
 
 <h2>Login Form</h2>
 
-<form action="/tempGo.go">
-    <!--Todo: implement and change name for tempGo.go -->
+<form action="/login" method="get">
+    <!--Todo: implement login function in go, return user name or name=null if wrong-->
     <div class="container">
         <label for="uname"><b>Username</b></label>
         <input type="text" placeholder="Enter Username" name="uname" required>
