--- a/signup.html
+++ b/signup.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<form action="/tempGo.go" style="border:1px solid #ccc">
-    <!--Todo: implement and change name for tempGo.go -->
+<form action="/signup" style="border:1px solid #ccc">
+    <!--Todo: implement signup function in go, return user name or uname=error if user already existed.-->
     <div class="container">
         <h1>Sign Up</h1>
         <p>Please fill in this form to create an account.</p>
