Add menu qty field

--- a/index.html
+++ b/index.html
@@ -73,26 +73,30 @@
       <p class="nospace">Menu Items</p>
     </div>
     <ul class="nospace clear services">
-      <li class="one_quarter first"><a href="#">
+      <li class="one_quarter first">
         <figure><img src="images/demo/gallery/01.png" alt="">
           <figcaption>Burger</figcaption>
         </figure>
-      </a></li>
-      <li class="one_quarter"><a href="#">
+        <input type="number" placeholder="0" name="qtyBurger">
+      </li>
+      <li class="one_quarter">
         <figure><img src="images/demo/gallery/01.png" alt="">
           <figcaption>Cheese Burger</figcaption>
         </figure>
-      </a></li>
-      <li class="one_quarter"><a href="#">
+        <input type="number" placeholder="0" name="qtyCheeseBurger">
+      </li>
+      <li class="one_quarter">
         <figure><img src="images/demo/gallery/01.png" alt="">
           <figcaption>French Fries</figcaption>
         </figure>
-      </a></li>
-      <li class="one_quarter"><a href="#">
+        <input type="number" placeholder="0" name="qtyFries">
+      </li>
+      <li class="one_quarter">
         <figure><img src="images/demo/gallery/01.png" alt="">
           <figcaption>Soda Drink</figcaption>
         </figure>
-      </a></li>
+        <input type="number" placeholder="0" name="qtyDrink">
+      </li>
     </ul>
     <p class="center"><a class="btn inverse" href="#">Check out</a></p>
     <!-- ################################################################################################ -->
