Add background and menu pics

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
-<div class="bgded overlay" style="background-image:url('images/demo/backgrounds/01.png');">
+<div class="bgded overlay" style="background-image:url('images/demo/backgrounds/counter_banner.png');">
   <!-- ################################################################################################ -->
   <div class="wrapper">
     <div id="pageintro" class="hoc clear">
@@ -74,28 +74,28 @@
     </div>
     <ul class="nospace clear services">
       <li class="one_quarter first">
-        <figure><img src="images/demo/gallery/01.png" alt="">
+        <figure><img src="images/demo/gallery/burger_nocheese.png" alt="">
           <figcaption>Burger</figcaption>
         </figure>
-        <input type="number" placeholder="0" name="qtyBurger">
+        <input class="qty_input" type="number" placeholder="0" name="qtyBurger">
       </li>
       <li class="one_quarter">
-        <figure><img src="images/demo/gallery/01.png" alt="">
+        <figure><img src="images/demo/gallery/burger_cheese.png" alt="">
           <figcaption>Cheese Burger</figcaption>
         </figure>
-        <input type="number" placeholder="0" name="qtyCheeseBurger">
+        <input class="qty_input" type="number" placeholder="0" name="qtyCheeseBurger">
       </li>
       <li class="one_quarter">
-        <figure><img src="images/demo/gallery/01.png" alt="">
+        <figure><img src="images/demo/gallery/fries.png" alt="">
           <figcaption>French Fries</figcaption>
         </figure>
-        <input type="number" placeholder="0" name="qtyFries">
+        <input class="qty_input" type="number" placeholder="0" name="qtyFries">
       </li>
       <li class="one_quarter">
-        <figure><img src="images/demo/gallery/01.png" alt="">
+        <figure><img src="images/demo/gallery/soda.png" alt="">
           <figcaption>Soda Drink</figcaption>
         </figure>
-        <input type="number" placeholder="0" name="qtyDrink">
+        <input class="qty_input" type="number" placeholder="0" name="qtyDrink">
       </li>
     </ul>
     <p class="center"><a class="btn inverse" href="#">Check out</a></p>
